--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html>
-<link rel="manifest" href="/manifest.json">
-<meta name="M-BRIO" content="Rumah Konsul M-BRIO" />
-<!-- Mendeklarasikan warna yang muncul pada address bar Chrome versi seluler -->
-<meta name="theme-color" content="#414f57" />
-<!-- Mendeklarasikan ikon untuk iOS -->
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="default" />
-<meta name="apple-mobile-web-app-title" content="M-BRIO" />
-<link rel="apple-touch-icon" href="path/to/icons/128x128.png" />
-<!-- Mendeklarasikan ikon untuk Windows -->
-<meta name="msapplication-TileImage" content="path/to/icons/128x128.png" />
-<meta name="msapplication-TileColor" content="#000000" />
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js');
-    });
-  }
-</script>
 <body>
-
-
-
+	<div class="wrap">
+		<div class="header">			
+			<h1>Malas Ngoding</h1>
+			<p>Tutorial belajar membuat layout website sederhana</p>
+		</div>
+		<div class="menu">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">HTML</a></li>
+				<li><a href="#">CSS</a></li>
+				<li><a href="#">PHP</a></li>
+				<li><a href="#">Javascript</a></li>				
+			</ul>
+		</div>
+		<div class="badan">			
+			<div class="sidebar">
+				sidebar
+				<ul>
+					<li><a href="#">Tutorial HTML dasar</a></li>
+					<li><a href="#">Tutorial CSS dasar</a></li>
+					<li><a href="#">Tutorial PHP dasar</a></li>
+					<li><a href="#">Tutorial JQuery dasar</a></li>				
+				</ul>
+			</div>
+			<div class="content">
+				content
+			</div>
+		</div>
+		<div class="clear"></div>
+		<div class="footer">
+			footer
+		</div>
+	</div>
 </body>
 </html>
